
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-compliance-copilot"
version = "0.1.0"
description = "Explain policy requirements, answer control questions, and provide compliance-friendly answer trails."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
